@@ -26,6 +26,7 @@ Enhancements::
 * upgrade to prawn-icon 3.1.x to add support for the Material Design Icons (`mdi`) as an available font-based icon set (PR #2334)
 * honor `GS_OPTIONS` environment variable for supplying additional parameters to command called by RGhost optimizer (#2337)
 * add support for passing a color mode to the default optimizer (#2347)
+* support horizontal alignment on AsciiDoc table cell that only contains paragraphs (#2358)
 
 Improvements::
 
